sc/source/filter/oox/drawingbase.cxx
@@ -170,6 +170,21 @@ void ShapeAnchor::importVmlAnchor( const OUString& rAnchor )
     }
 }
 
+bool ShapeAnchor::isAnchorValid()
+{
+    /** Checks whether the shape is visible based on the anchor */
+    /** if From and To anchor has the same attribute values, the shape will not have width and height */
+    /** and thus we can assume that such kind of shape will be not be visible */
+    bool retValue = true;
+    if (meAnchorType == ANCHOR_TWOCELL &&
+        (maTo.mnRow == maFrom.mnRow && maTo.mnCol == maFrom.mnCol) &&
+        (maTo.mnColOffset == maFrom.mnColOffset && maTo.mnRowOffset == maFrom.mnRowOffset))
+    {
+        retValue = false;
+    }
+    return retValue;
+}
+
 EmuRectangle ShapeAnchor::calcAnchorRectEmu( const css::awt::Size& rPageSizeHmm ) const
 {
     AddressConverter& rAddrConv = getAddressConverter();
